# projeto-dafonte

./: .gitignore  PoC.md  README.md  descricao-projeto.md  docker-compose.dev.yml  docker-compose.yml  index.html
.claude/: settings.json
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 208cf538aa72_user_add_refresh_token_hash.py  24ac77c4c365_initial_schema.py  40af93a3b12b_user_add_full_name_email.py  a3f1b2c4d5e6_add_stock_alert_threshold.py  b7c2d3e4f5a6_add_unit_prefix_number.py
backend/app/: main.py
backend/app/admin/: setup.py  views.py
backend/app/api/: assignments.py  auth.py  billing.py  dashboard.py  erp.py  evidence.py  finance.py  health.py  history.py  home.py  onboarding.py  product.py  residents.py  stock.py
backend/app/core/: config.py  database.py  dependencies.py  logger.py  scheduler.py  security.py  seed.py
backend/app/models/: __init__.py  billing.py  condominium.py  evidence.py  onboarding.py  product.py  stock.py  unit.py  user.py
backend/app/schemas/: assignment.py  auth.py  billing.py  evidence.py  finance.py  history.py  product.py  stock.py
backend/app/services/erp/: __init__.py  base.py  factory.py  mock_client.py  mock_data.json  schemas.py  sync_service.py  utils.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_auth_endpoints.py  test_billing_endpoints.py  test_finance_endpoints.py  test_stock_endpoints.py
backend/tests/unit/: test_commission_service.py  test_erp_unwrap.py  test_stock_service.py
docs/: RUNBOOK.md  (+10 more)
(+44 files in other folders)
